fix: gap on search page

--- a/frontend/web/micro-ui-internals/packages/css/src/index.scss
+++ b/frontend/web/micro-ui-internals/packages/css/src/index.scss
@@ -751,6 +751,11 @@ input[type="number"] {
 .digit-search-wrapper {
   background-color: unset !important;
 }
+.search-application-wrapper {
+  .digit-search-field-wrapper .vertical+.vertical {
+    margin-left: 24px !important;
+  }
+}
 
 .digit-search-button-wrapper-search-icon {
   width: 40px !important;
